--- a/style.css
+++ b/style.css
@@ -1,25 +1,25 @@
             @font-face {
                 font-family: Arimo;
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo.woff);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo.svg);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Bold.eot);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Bold.svg);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Bold.ttf);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Bold.eot);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Bold.woff);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Bold.woff2);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-BoldItalic.eot);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-BoldItalic.svg);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-BoldItalic.ttf);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-BoldItalic.woff);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-BoldItalic.woff2);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Italic.eot);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Italic.svg);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Italic.ttf);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Italic.woff);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Italic.woff2);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Regular.eot);
-                src: url(D:/Working/homework5/homework5.1/fonts/arimo/Arimo-Regular.ttf);
+                src: url(fonts/arimo/Arimo-Bold.eot);
+                src: url(fonts/arimo/Arimo.svg);
+                src: url(fonts/arimo/Arimo.woff);
+                src: url(fonts/arimo/Arimo-Bold.svg);
+                src: url(fonts/arimo/Arimo-Bold.ttf);
+                src: url(fonts/arimo/Arimo-Bold.eot);
+                src: url(fonts/arimo/Arimo-Bold.woff);
+                src: url(fonts/arimo/Arimo-Bold.woff2);
+                src: url(fonts/arimo/Arimo-BoldItalic.eot);
+                src: url(fonts/arimo/Arimo-BoldItalic.svg);
+                src: url(fonts/arimo/Arimo-BoldItalic.ttf);
+                src: url(fonts/arimo/Arimo-BoldItalic.woff);
+                src: url(fonts/arimo/Arimo-BoldItalic.woff2);
+                src: url(fonts/arimo/Arimo-Italic.eot);
+                src: url(fonts/arimo/Arimo-Italic.svg);
+                src: url(fonts/arimo/Arimo-Italic.ttf);
+                src: url(fonts/arimo/Arimo-Italic.woff);
+                src: url(fonts/arimo/Arimo-Italic.woff2);
+                src: url(fonts/arimo/Arimo-Regular.eot);
+                src: url(fonts/arimo/Arimo-Regular.ttf);
             }
             
             body {
@@ -50,10 +50,10 @@
             
             tr td {
                 text-align: center;
-                padding: 15px;
-                font-size: 16pt;
+                /* padding: 15px; */
+                font-size: 13pt;
                 border-bottom: 1px solid #cacaca;
-                width: 150px;
+                width: 156px;
             }
             
             .row1 td,
@@ -68,41 +68,51 @@
             .row2 td:nth-of-type(2n+2),
             .row1 td:nth-of-type(2n+2) {
                 background: #e3e3e3;
-                /*background: #f0eded;*/
+                width: 156px;
             }
             
             .row1 td:first-child {
                 background: #ffffff;
+                font-size: 14pt;
             }
             
             .row1 td {
                 height: 110px;
-                color: #414141;
+                color: #484848;
                 font-weight: 600;
+                font-size: 15pt;
+            }
+            
+            p {
+                margin: 10px 0;
             }
             
             .baks {
-                font-size: 34pt;
+                font-size: 26pt;
                 font-weight: 700;
-                margin-left: -150px;
-                margin-top: 50px;
+                margin-left: -116px;
             }
             
             .up99 {
                 position: absolute;
                 float: left;
-                top: 45px;
-                left: 100px;
+                top: 55px;
+                left: 64px;
                 font-weight: 700;
                 height: 35px;
-                margin-right: 30px;
+                font-size: 11pt;
             }
             
             .shift {
                 display: block;
-                width: 130px;
-                margin-left: 120px;
-                margin-top: -29px;
+                margin-left: 67px;
+                margin-top: -25px;
+                font-size: 9pt;
+                transform: scaleX(1.15);
+                -webkit-transform: scaleX(1.15);
+                -moz-transform: scaleX(1.15);
+                -ms-transform: scaleX(1.15);
+                -o-transform: scaleX(1.15);
             }
             
             .row2 td:nth-child(1) {
@@ -124,25 +134,28 @@
             }
             
             .fa {
-                margin-right: 10px;
+                margin-bottom: 10px;
+                color: #848484;
             }
             
             button {
-                width: 190px;
-                height: 50px;
-                margin: 25px;
+                width: 140px;
+                height: 40px;
+                margin: 27px 0 20px 0;
                 border: none;
                 color: #fff;
                 text-transform: uppercase;
                 position: relative;
                 background-color: #414141;
                 border-radius: 5px;
+                font-size: 12pt;
+                font-weight: 700;
             }
             
             button::after {
                 content: " ";
-                width: 190px;
-                height: 7px;
+                width: 140px;
+                height: 6px;
                 background-color: hsla(0, 0%, 0%, 30%);
                 border-bottom-right-radius: 5px;
                 border-bottom-left-radius: 5px;
@@ -159,10 +172,13 @@
                 font-size: 10pt;
             }
             
-            .row1 th {
-                color: #000;
+            .row1 {
+                color: #484848;
+                /* height: 140px; */
             }
             
             .col1 {
-                width: 200px;
+                width: 196px;
+                font-size: 17pt;
+                font-weight: 700;
             }
